--- a/SurveyEducation/Areas/Admin/Views/Survey/Create.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Create.cshtml
@@ -12,7 +12,7 @@
                 <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false"> Enter your information</button>
             </li>
         </ul>
-        <div class="tab-content" id="myTabContent">
+        <div class="tab-content bg-light" id="myTabContent">
             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                 <form>
                     <div class="col-12 col-mb-4">
@@ -28,6 +28,12 @@
                             <div class="col-2"><label class="form-label" for="basic-default-company">CreateedBy</label></div>
                             <div class="col-5"><input type="text" class="form-control" id="basic-default-company" placeholder="Createed By" /></div>
                         </div>
+                        @*<div class="row m-2 abcd">
+                            <div class="col-7"><input type="text" class="form-control" id="basic-default-company"/></div>
+                            <div class="d-flex justify-content-end col-2">
+                                <button type="submit" class="btn btn-primary">Add a new question</button>
+                            </div>
+                        </div>*@
                     </div>
                 </form>
             </div>
@@ -49,10 +55,10 @@
                                  class="accordion-collapse collapse"
                                  aria-labelledby="headingOne"
                                  data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
+                                <div class="accordion-body"  id="myList">
                                     <div class="row">
                                         <div class="col-10">
-                                            <input type="text" class="form-control" id="basic-default-company" placeholder="Question" />
+                                            <input  type="text" class="form-control" id="basic-default-company" placeholder="Question" />
                                         </div>
                                         <div class="col">
                                             <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
@@ -77,25 +83,55 @@
                                  class="accordion-collapse collapse"
                                  aria-labelledby="headingTwo"
                                  data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-
-                                    <!-- <label class="form-label" for="basic-default-company">Question checkbox</label><br> -->
-                                    <input type="checkbox" id="vehicle1" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle2" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle3" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle4" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle5" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle6" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle7" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle8" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
+                                <div class="accordion-body" id="myList">
+                                    <div class="col" >
+                                        <input type="checkbox" id="vehicle1" name="vehicle3">
+                                        <label for="vehicle3"> I have a boat</label>
+                                        <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                        <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
+                                    </div>
+                                    <div class="col" >
+                                        <input type="checkbox" id="vehicle2" name="vehicle3">
+                                        <label for="vehicle3"> I have a boat</label>
+                                        <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                        <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
+                                    </div>
+                                    <div class="col" >
+                                        <input type="checkbox" id="vehicle3" name="vehicle3">
+                                        <label for="vehicle3"> I have a boat</label>
+                                        <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                        <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
+                                    </div>
+                                    <div class="col" >
+                                        <input type="checkbox" id="vehicle4" name="vehicle3">
+                                        <label for="vehicle3"> I have a boat</label>
+                                        <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                        <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
+                                    </div>
+                                    <div class="col" >
+                                        <input type="checkbox" id="vehicle5" name="vehicle3">
+                                        <label for="vehicle3"> I have a boat</label>
+                                        <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                        <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
+                                    </div>
+                                    <div class="col" >
+                                        <input type="checkbox" id="vehicle6" name="vehicle3">
+                                        <label for="vehicle3"> I have a boat</label>
+                                        <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                        <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
+                                    </div>
+                                    <div class="col" >
+                                        <input type="checkbox" id="vehicle7" name="vehicle3">
+                                        <label for="vehicle3"> I have a boat</label>
+                                        <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                        <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
+                                    </div>
+                                   <div class="col" >
+                                       <input type="checkbox" id="vehicle8" name="vehicle3">
+                                       <label for="vehicle3"> I have a boat</label>
+                                       <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                       <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
+                                   </div>
                                 </div>
                             </div>
                         </div>
@@ -114,14 +150,37 @@
                                  class="accordion-collapse collapse"
                                  aria-labelledby="headingTwo"
                                  data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <!-- <label class="form-label" for="basic-default-company">CreateedBy</label><br> -->
-                                    <input type="radio" id="age1" name="age" value="30">
-                                    <label for="age1">0 - 30</label><br>
-                                    <input type="radio" id="age2" name="age" value="60">
-                                    <label for="age2">31 - 60</label><br>
-                                    <input type="radio" id="age3" name="age" value="100">
-                                    <label for="age3">61 - 100</label><br>
+                                <div class="accordion-body"  id="myList">
+                                    <div class="row">
+                                        <div class="col-2">
+                                            <input type="radio" id="age1" name="age" value="30">
+                                            <label for="age1">0 - 30</label>
+                                        </div>
+                                        <div class="col-2">
+                                            <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                            <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-2">
+                                            <input type="radio" id="age2" name="age" value="60">
+                                            <label for="age2">31 - 60</label>
+                                        </div>
+                                        <div class="col-2">
+                                            <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                            <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-2">
+                                            <input type="radio" id="age3" name="age" value="100">
+                                            <label for="age3">61 - 100</label>
+                                        </div>
+                                        <div class="col-2">
+                                            <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                            <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
+                                        </div>
+                                     </div>
                                 </div>
                             </div>
                         </div>
@@ -133,16 +192,15 @@
                                         data-bs-target="#accordionTwo4"
                                         aria-expanded="false"
                                         aria-controls="accordionTwo4">
-                                    <!-- Question text -->
                                 </button>
                             </h2>
                             <div id="accordionTwo4"
                                  class="accordion-collapse collapse"
                                  aria-labelledby="headingTwo"
                                  data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
+                                <div class="accordion-body"  id="myList">
                                     <div class="row">
-                                        <div class="col-6 col-mb-4">
+                                        <div class="col-8 m-2">
                                             <select class="form-select col-md-6" aria-label="Default select example">
                                                 <option selected>Open this select menu</option>
                                                 <option value="1">One</option>
@@ -150,13 +208,23 @@
                                                 <option value="3">Three</option>
                                             </select>
                                         </div>
-                                        <div class="col-6 col-mb-4">
+                                        <div class="col-2">
+                                            <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                            <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-8 m-2">
                                             <select class="form-select" aria-label="Default select example">
                                                 <option selected>Open this select menu</option>
                                                 <option value="1">One</option>
                                                 <option value="2">Two</option>
                                                 <option value="3">Three</option>
                                             </select>
+                                         </div>
+                                        <div class="col-2">
+                                            <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                            <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
                                         </div>
                                     </div>
                                 </div>
@@ -239,6 +307,12 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        @*<div class="col-9"><input type="text" class="form-control" id="basic-default-company" /></div>*@
+                        <div class="d-flex justify-content-end">
+                            <button type="submit" class="btn btn-primary">Add a new question</button>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
@@ -251,6 +325,7 @@
 <script>
     function myFunction() {
         alert("Are you sure you want to delete this survey?");
+        const list = document.getElementById("myList", "myList1", "myList2", "myList3xxx");
+        list.removeChild(list.firstElementChild);
     }
-
 </script>
