--- a/SurveyEducation/Areas/Admin/Views/Shared/_Menu.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Shared/_Menu.cshtml
@@ -1,6 +1,6 @@
 ﻿<aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
     <div class="app-brand demo">
-        <a href="index.html" class="app-brand-link">
+        <a href="/Admin/Dashboard/Index" class="app-brand-link">
             <span class="app-brand-logo demo">
                 <svg width="25"
                      viewBox="0 0 25 42"
@@ -55,41 +55,31 @@
     <div class="menu-inner-shadow"></div>
 
     <ul class="menu-inner py-1">
+        <!-- Dashboard -->
         <li class="menu-item active">
-            <i class="menu-icon tf-icons bx bx-home-circle"></i>
-            @Html.ActionLink("Dashboard", "Index", "Dashboard", routeValues: null, htmlAttributes: new { @class = "menu-link" })
+            <a href="/Admin/Dashboard/Index" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-home-circle"></i>
+                <div data-i18n="Analytics">Dashboard</div>
+            </a>
         </li>
-        <li class="menu-header small text-uppercase">
-            <span class="menu-header-text">Admin</span>
-        </li>
+
+        <!-- Admin -->
+        <li class="menu-header small text-uppercase"><span class="menu-header-text">Admin</span></li>
+        <!-- Survey -->
         <li class="menu-item">
-            <a href="javascript:void(0);" class="menu-link menu-toggle">
-                <i class="menu-icon tf-icons bx bx-dock-top"></i>
-                <div data-i18n="Account Settings">Survey</div>
+            <a href="javascript:void(0)" class="menu-link menu-toggle">
+                <i class="menu-icon tf-icons bx bx-box"></i>
+                <div data-i18n="User interface">Survey</div>
             </a>
             <ul class="menu-sub">
                 <li class="menu-item">
-                    @Html.ActionLink("Create survey", "Create", "Survey", routeValues: null, htmlAttributes: new {@class="menu-link"})
-                </li>
-                <li class="menu-item">
-                    @Html.ActionLink("List survey", "Index", "Survey", routeValues: null, htmlAttributes: new { @class = "menu-link" })
-                </li>
-            </ul>
-        </li>
-        <li class="menu-item">
-            <a href="javascript:void(0);" class="menu-link menu-toggle">
-                <i class="menu-icon tf-icons bx bx-dock-top"></i>
-                <div data-i18n="Account Settings">Account</div>
-            </a>
-            <ul class="menu-sub">
-                <li class="menu-item">
-                    <a href="pages-account-settings-account.html" class="menu-link">
-                        <div data-i18n="Account">Create account</div>
+                    <a href="/Admin/Survey/Create" class="menu-link">
+                        <div data-i18n="Create">Create Survey</div>
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="pages-account-settings-account.html" class="menu-link">
-                        <div data-i18n="Account">List account</div>
+                    <a href="ui-alerts.html" class="menu-link">
+                        <div data-i18n="Alerts">Alerts</div>
                     </a>
                 </li>
             </ul>
