--- a/SurveyEducation/Areas/Admin/Views/Survey/Create.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Create.cshtml
@@ -34,88 +34,99 @@
             <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                 <form>
                     <div class="col-12 col-mb-4">
-                        <div class="card accordion-item active m-3">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button type="button"
-                                        class="accordion-button collapsed"
-                                        data-bs-toggle="collapse"
-                                        data-bs-target="#accordionOne"
-                                        aria-expanded="false"
-                                        aria-controls="accordionOne">
-                                    Question text
-                                </button>
-                            </h2>
-                            <div id="accordionOne"
-                                 class="accordion-collapse collapse"
-                                 aria-labelledby="headingOne"
-                                 data-bs-parent="#accordionExample">
-                                <div class="accordion-body-text">
-                                    <div class="row">
-                                        <div id="answer-text1">
-                                            
-                                        </div>
-                                        <div class="col">
-                                            <input type="text" id="form-add-answer" class="col-md-8" />
-                                            <button id="btnAddAnswerText">Add</button>
+                        <div id="row-1">
+                            <div class="row-1">
+                                <div class="card accordion-item active m-3">
+                                    <h2 class="accordion-header" id="headingOne">
+                                        <button type="button"
+                                                class="accordion-button collapsed"
+                                                data-bs-toggle="collapse"
+                                                data-bs-target="#accordionOne"
+                                                aria-expanded="false"
+                                                aria-controls="accordionOne">
+                                            Question text
+                                        </button>
+                                    </h2>
+                                    <div id="accordionOne"
+                                         class="accordion-collapse collapse"
+                                         aria-labelledby="headingOne"
+                                         data-bs-parent="#accordionExample">
+                                        <div class="accordion-body-text">
+                                            <div class="row">
+                                                <div id="answer-text1">
+
+                                                </div>
+                                                <div class="col">
+                                                    <input type="text" id="form-add-answer" class="col-md-8" />
+                                                    <button id="btnAddAnswerText">Add</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="card accordion-item m-3">
-                            <h2 class="accordion-header" id="headingTwo">
-                                <button type="button"
-                                        class="accordion-button collapsed"
-                                        data-bs-toggle="collapse"
-                                        data-bs-target="#accordionTwo"
-                                        aria-expanded="false"
-                                        aria-controls="accordionTwo">
-                                    Question checkbox
-                                </button>
-                            </h2>
-                            <div id="accordionTwo"
-                                 class="accordion-collapse collapse"
-                                 aria-labelledby="headingTwo"
-                                 data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <ul id="answers">
-                                        
-                                    </ul>
-                                </div>
-                                <div class="col">
-                                    <input type="text" name="answer234" id="form-add-answer2" class="col-md-8" />
-                                    <input type="button" id="btnSubmit1" onclick="handleAddAnswer2()" class="col-md-2 m-3 mt-3" value="Add answer" />
-                                </div>
-                                <div class="col">
-                                    @*<button class="btn btn-warning" id="btnEditAnswerText">Edit</button>
-                                    <button class="btn btn-success" id="btnSaveAnswerText">Save</button>
-                                    <button class="btn btn-primary" id="btnDeleteAnswer">Delete</button>*@
+                        <div id="row-2">
+                            <div class="row-2">
+                                <div class="card accordion-item m-3">
+                                    <h2 class="accordion-header" id="headingTwo">
+                                        <button type="button"
+                                                class="accordion-button collapsed"
+                                                data-bs-toggle="collapse"
+                                                data-bs-target="#accordionTwo"
+                                                aria-expanded="false"
+                                                aria-controls="accordionTwo">
+                                            Question checkbox
+                                        </button>
+                                    </h2>
+                                    <div id="accordionTwo"
+                                         class="accordion-collapse collapse"
+                                         aria-labelledby="headingTwo"
+                                         data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <ul id="answers">
+                                            </ul>
+                                        </div>
+                                        <div class="col">
+                                            <input type="text" name="answer234" id="form-add-answer2" class="col-md-8" />
+                                            <input type="button" id="btnSubmit1" onclick="handleAddAnswer2()" class="col-md-2 m-3 mt-3" value="Add answer" />
+                                        </div>
+                                        <div class="col">
+                                            @*<button class="btn btn-warning" id="btnEditAnswerText">Edit</button>
+                            <button class="btn btn-success" id="btnSaveAnswerText">Save</button>
+                            <button class="btn btn-primary" id="btnDeleteAnswer">Delete</button>*@
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="card accordion-item m-3">
-                            <h2 class="accordion-header" id="headingTwo3">
-                                <button type="button"
-                                        class="accordion-button collapsed"
-                                        data-bs-toggle="collapse"
-                                        data-bs-target="#accordionTwo3"
-                                        aria-expanded="false"
-                                        aria-controls="accordionTwo3">
-                                    Question select one
-                                </button>
-                            </h2>
-                            <div id="accordionTwo3"
-                                 class="accordion-collapse collapse"
-                                 aria-labelledby="headingTwo"
-                                 data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <!-- <label class="form-label" for="basic-default-company">CreateedBy</label><br> -->
-                                    <input type="radio" id="age1" name="age" value="30">
-                                    <label for="age1">0 - 30</label><br>
-                                    <input type="radio" id="age2" name="age" value="60">
-                                    <label for="age2">31 - 60</label><br>
-                                    <input type="radio" id="age3" name="age" value="100">
-                                    <label for="age3">61 - 100</label><br>
+                        <div id="row-3">
+                            <div class="row-3">
+                                <div class="card accordion-item m-3">
+                                    <h2 class="accordion-header" id="headingTwo3">
+                                        <button type="button"
+                                                class="accordion-button collapsed"
+                                                data-bs-toggle="collapse"
+                                                data-bs-target="#accordionTwo3"
+                                                aria-expanded="false"
+                                                aria-controls="accordionTwo3">
+                                            Question select one
+                                        </button>
+                                    </h2>
+                                    <div id="accordionTwo3"
+                                         class="accordion-collapse collapse"
+                                         aria-labelledby="headingTwo"
+                                         data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <!-- <label class="form-label" for="basic-default-company">CreateedBy</label><br> -->
+                                            <input type="radio" id="age1" name="age" value="30">
+                                            <label for="age1">0 - 30</label><br>
+                                            <input type="radio" id="age2" name="age" value="60">
+                                            <label for="age2">31 - 60</label><br>
+                                            <input type="radio" id="age3" name="age" value="100">
+                                            <label for="age3">61 - 100</label><br>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -154,6 +165,23 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+
+                        <div id="newRow-1"></div>
+                        <div id="newRow-2"></div>
+                        <div id="newRow-3"></div>
+
+                        <div class="d-flex justify-content-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-outline-success dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Add
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" id="addRow-1" href="#">Question text</a></li>
+                                    <li><a class="dropdown-item" id="addRow-2" href="#">Question checkbox</a></li>
+                                    <li><a class="dropdown-item" id="addRow-3" href="#">Question select one</a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -357,6 +385,32 @@
             }
         }
     }
+
+    $(function () {
+
+        $("#addRow-1").click(function (e) {
+            e.preventDefault();
+            var template = $("#row-1").find(".row-1").first();
+            var newRow = template.clone();
+            newRow.find("input.formfield").val("");
+            $("#newRow-1").append(newRow);
+        });
+
+        $("#addRow-2").click(function (e) {
+            e.preventDefault();
+            var template = $("#row-2").find(".row-2").first();
+            var newRow = template.clone();
+            newRow.find("input.formfield").val("");
+            $("#newRow-2").append(newRow);
+        });
+        $("#addRow-3").click(function (e) {
+            e.preventDefault();
+            var template = $("#row-3").find(".row-3").first();
+            var newRow = template.clone();
+            newRow.find("input.formfield").val("");
+            $("#newRow-3").append(newRow);
+        });
+    });
 </script>
 @*<script>
     $(document).ready(function () {
